# EchoNexus

./: .clang-format  .gitignore  C++课程设计报告模板.doc  C++课程设计报告模板.doc.bak  CMakeLists.txt  CMakePresets.json  Justfile  LICENSE  README.md  vcpkg.json
.zed/: settings.json  tasks.json
benchmarks/: GUIDE.md  package.json
benchmarks/apps/axum/: Cargo.toml
benchmarks/apps/axum/src/: main.rs
benchmarks/apps/echonexus/: CMakeLists.txt  CMakePresets.json
benchmarks/apps/echonexus/src/: main.cpp
benchmarks/apps/elysia/: package-lock.json  package.json
benchmarks/apps/elysia/src/: index.ts
benchmarks/apps/fastapi/: app.py
benchmarks/apps/flask/: app.py
benchmarks/apps/gin/: go.mod  main.go
benchmarks/apps/koa/: app.js  package-lock.json  package.json
benchmarks/apps/springboot/: build.gradle.kts  settings.gradle.kts
benchmarks/apps/springboot/src/main/kotlin/benchmarks/: Application.kt  BenchmarkController.kt  ScopeFilter.kt
benchmarks/configs/: frameworks.ts
benchmarks/src/: cases.ts  cli.ts  executables.ts  failures.ts  health.ts  load.ts  options.ts  preflight.ts  report.ts  runtime.ts  skip-results.ts  system.ts  toolchains.ts  types.ts
benchmarks/src/sampler/: common.ts  darwin.ts  index.ts  linux.ts  windows.ts
benchmarks/tests/: cases.test.ts  failures.test.ts  frameworks.test.ts  oha.test.ts  options.test.ts  preflight.test.ts  report.test.ts  runtime.test.ts  sampler.test.ts  skip-results.test.ts  toolchains.test.ts
cmake/: EchoNexusVcpkg.cmake
example/: CMakeLists.txt
example/src/: main.cpp
include/: handler.hpp
include/middlewares/: cors.hpp  logger.hpp  router.hpp
include/types/: common.hpp  request.hpp  response.hpp
src/: handler.cpp
src/middlewares/: cors.cpp  logger.cpp  router.cpp
tests/: CMakeLists.txt  GUIDE.md
tests/common/: beast_test_server.hpp  mock_executor.hpp  test_support.hpp
tests/integration/: serve.test.cpp  serve_cors.test.cpp  serve_error_handling.test.cpp  serve_middleware.test.cpp  serve_response_types.test.cpp  serve_routes.test.cpp  serve_test_app.hpp  server_smoke.test.cpp
tests/unit/: handler.test.cpp  serve.test.cpp  test.test.cpp
tests/unit/middlewares/: cors.test.cpp  logger.test.cpp  router.test.cpp
tests/unit/types/: request.test.cpp  response.test.cpp
tests/unit/utils/: parse.test.cpp
